# CapsLock

./: .env.example  .gitignore  CHANGELOG.md  README.md  capslock.toml.example  pyproject.toml
.github/workflows/: ci.yml
CapsLock/: README.md
CapsLock/capslock/: __init__.py  cli.py  config.py  environment.py  evidence.py  observability.py  policy.py
CapsLock/tests/: test_workspace.py
capslock/: __init__.py  __main__.py  _version.py  bootstrap.py  changes.py  cli.py  config.py  credentials.py  domain.py  embeddings.py  environment.py  execution.py  external.py  interaction.py  layout.py  lifecycle.py  mcp.py  memory.py  model.py  models.py  observability.py  permissions.py  policy.py  ports.py  runtime.py  runtime_support.py  security.py  session.py  session_management.py  status.py  theme.py  tools.py
capslock/application/: __init__.py  actions.py  app.py  foreground.py  queries.py  workflow.py
capslock/cli/: __init__.py  __main__.py  actions.py  app.py  chat.py  commands.py  context.py  diagnostic_core.py  diagnostic_probes.py  diagnostics.py  dispatch.py  exec.py  input_requests.py  lifecycle.py  memory.py  migration.py  plugins.py  presentation.py  prompt.py  providers.py  render.py  setup.py  skills.py  status.py  tui.py
capslock/collaboration/: __init__.py  capabilities.py  models.py  runner.py  service.py  verifier.py  workspace.py
capslock/composition/: __init__.py  actions.py  (+3 more)
docs/: agent-reference.md  reference.md  roadmap.md  v1-development.md
scripts/: check_repository.py  evaluate_agent.py  evaluate_memory.py  verify_release.py  write_checksums.py
tests/: __init__.py  helpers.py  test_actions.py  test_actions_v2.py  test_application.py  test_boundaries.py  test_boundaries_v2.py  test_changes.py  test_cli.py  test_cli_external.py  test_cli_memory.py  test_cli_release.py  test_cli_resume.py  test_cli_status.py  test_cli_v2.py  test_collaboration.py  test_collaboration_v22.py  test_execution.py  test_external.py  test_fullscreen_tui.py  test_governance.py  test_governance_v110.py  test_kernel.py  test_layout.py  test_layout_security.py  test_lifecycle.py  test_lifecycle_v19.py  test_memory.py  test_memory_intelligence.py  test_memory_quality.py  test_memory_v2.py  test_model.py  test_model_routing.py  test_model_routing_v18.py  test_permissions.py  test_plugins.py  test_priority_tools.py  test_runtime.py  test_runtime_v2.py  test_skills.py  (+10 more)
(+242 files in other folders)
