[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capslock"
version = "0.1.0"
description = "Grounded Markdown document question-answering agent"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0", "rich>=13.0.0", "httpx>=0.27.0", "mcp>=1.0.0", "prompt-toolkit>=3.0.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
capslock = "capslock.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["capslock*"]
