[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capslock"
dynamic = ["version"]
description = "A local, recoverable workspace agent with controlled actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0", "rich>=13.0.0", "httpx>=0.27.0", "mcp>=1.0.0", "prompt-toolkit>=3.0.52", "jsonschema>=4.23,<5", "packaging>=24,<27"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "build>=1.2.2", "twine>=5.1.0", "pip-audit>=2.7.3"]

[project.scripts]
capslock = "capslock.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "capslock._version.__version__"}

[tool.setuptools.packages.find]
include = ["capslock*"]
