[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capslock"
dynamic = ["version"]
description = "A local, recoverable workspace agent with controlled actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0", "rich>=13.0.0", "httpx>=0.27.0", "aiosqlite>=0.20,<1", "mcp>=1.0.0", "prompt-toolkit>=3.0.52", "PyYAML>=6,<7", "keyring>=25,<26", "tomlkit>=0.13,<1"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "build>=1.2.2", "twine>=5.1.0", "pip-audit>=2.7.3"]
local-embeddings = ["fastembed>=0.7,<1"]

[project.scripts]
capslock = "capslock.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "capslock._version.__version__"}

[tool.setuptools.packages.find]
include = ["capslock*"]
